--- a/package.json
+++ b/package.json
@@ -2,23 +2,46 @@
   "name": "nutui-rn",
   "version": "0.0.11",
   "scripts": {
+    "bootstrap": "yarn demo && yarn install",
+    "dev": "yarn --cwd demo",
+    "doc": "npm run generate:docs && vite --open --force",
+    "doc:jd": "npm run generate:jd:docs && vite --open --force",
     "generate:docs": "node scripts/generate-nutui.js",
     "generate:jd:docs": "node scripts/generate-jd-nutui.js",
-    "dev": "npm run generate:docs && vite --open --force",
-    "dev:jd": "npm run generate:jd:docs && vite --open --force",
     "build:docs": "vite build",
+    "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "preview": "vite preview",
-    "prepack": "bob build"
+    "prepack": "bob build",
+    "test": "jest",
+    "typecheck": "tsc --noEmit",
+    "release": "release-it"
   },
   "author": "jdf2e",
   "license": "MIT",
+  "repository": "https://github.com/jdf2e/nutui-react-native",
+  "bugs": {
+    "url": "https://github.com/jdf2e/nutui-react-native/issues"
+  },
+  "homepage": "https://github.com/jdf2e/nutui-react-native#readme",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "dependencies": {
     "@bem-react/classname": "^1.5.12",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-root-portal": "^1.0.9"
   },
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
+  },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.0.2",
+    "@evilmartians/lefthook": "^1.2.2",
+    "@react-native-community/eslint-config": "^3.0.2",
+    "@release-it/conventional-changelog": "^5.0.0",
     "@types/dedent": "^0.7.0",
+    "@types/jest": "^28.1.2",
     "@types/node": "^18.11.9",
     "@types/postcss-import": "^14.0.0",
     "@types/react": "^18.0.24",
@@ -28,12 +51,20 @@
     "@types/react-syntax-highlighter": "^13.5.2",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "commitlint": "^17.0.2",
     "dedent": "^0.7.0",
+    "del-cli": "^5.0.0",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.1",
     "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
     "lzutf8": "^0.6.2",
     "markdown-navbar": "^1.4.3",
+    "pod-install": "^0.1.0",
     "postcss-import": "^15.0.0",
+    "prettier": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
@@ -42,6 +73,7 @@
     "react-router-dom": "^5.3.4",
     "react-syntax-highlighter": "^15.4.5",
     "rehype-raw": "^6.1.1",
+    "release-it": "^15.0.0",
     "remark-directive": "^2.0.1",
     "remark-gfm": "^3.0.1",
     "sass": "^1.56.0",
@@ -52,6 +84,7 @@
   "react-native": "components/index.ts",
   "module": "lib/module/index.js",
   "types": "lib/typescript/index.d.ts",
+  "source": "components",
   "files": [
     "components",
     "lib",
@@ -68,8 +101,78 @@
       "typescript"
     ]
   },
+  "keywords": [
+    "react-native",
+    "ios",
+    "android",
+    "nutui"
+  ],
+  "engines": {
+    "node": ">= 16.0.0"
+  },
+  "packageManager": "^yarn@1.22.15",
+  "jest": {
+    "preset": "react-native",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/example/node_modules",
+      "<rootDir>/lib/"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular"
+      }
+    }
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@react-native-community",
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "quoteProps": "consistent",
+          "singleQuote": true,
+          "tabWidth": 2,
+          "trailingComma": "es5",
+          "useTabs": false
+        }
+      ]
+    }
+  },
   "eslintIgnore": [
     "node_modules/",
-    "lib/"
-  ]
+    "lib/",
+    "components/",
+    "demo/",
+    "sites/",
+    "vite/",
+    "scripts/"
+  ],
+  "prettier": {
+    "quoteProps": "consistent",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "es5",
+    "useTabs": false
+  }
 }
