fix: 优化渐变处理

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nutui-rn",
   "version": "0.0.11",
   "scripts": {
-    "bootstrap": "yarn demo && yarn install",
+    "bootstrap": "yarn --cwd demo && yarn",
     "dev": "yarn --cwd demo web",
     "doc": "npm run generate:docs && vite --open --force",
     "doc:jd": "npm run generate:jd:docs && vite --open --force",
@@ -58,9 +58,11 @@
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.1.1",
+    "expo-linear-gradient": "^12.0.1",
+    "expo-modules-core": "^1.1.1",
     "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
+    "jest": "^28.1.1",
     "lzutf8": "^0.6.2",
     "markdown-navbar": "^1.4.3",
     "pod-install": "^0.1.0",
