--- a/sites/config.json
+++ b/sites/config.json
@@ -32,6 +32,23 @@
           "author": "songsong"
         }
       ]
+    },
+    {
+      "name": "操作反馈",
+      "enName": "feedback",
+      "packages": [
+        {
+          "version": "0.0.1",
+          "name": "Drag",
+          "type": "component",
+          "cName": "拖拽",
+          "desc": "实现可拖拽的任意元素",
+          "sort": 1,
+          "show": true,
+          "taro": true,
+          "author": "songsong"
+        }
+      ]
     }
   ]
 }
