--- a/sites/config.json
+++ b/sites/config.json
@@ -49,6 +49,23 @@
           "author": "songsong"
         }
       ]
+    },
+    {
+      "name": "展示组件",
+      "enName": "exhibition",
+      "packages": [
+        {
+          "version": "0.0.1",
+          "name": "Collapse",
+          "type": "component",
+          "cName": "折叠面板",
+          "desc": "折叠面板，可进行内容折叠展开操作，可以多面板配合使用。",
+          "sort": 1,
+          "show": true,
+          "taro": true,
+          "author": "zhenyulei"
+        }
+      ]
     }
   ]
 }
