--- a/sites/config.json
+++ b/sites/config.json
@@ -49,6 +49,16 @@
           "sort": 3,
           "show": true,
           "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "Indicator",
+          "type": "component",
+          "cName": "指示器",
+          "desc": "显示一个任务或流程的进度，常用于开通流程。",
+          "sort": 4,
+          "show": true,
+          "author": ""
         }
       ]
     },
