--- a/sites/config.json
+++ b/sites/config.json
@@ -5,13 +5,132 @@
       "enName": "base",
       "packages": [
         {
-          "version": "0.0.1",
+          "version": "0.0.2",
           "name": "Button",
           "type": "component",
           "cName": "按钮",
           "desc": "按钮",
           "sort": 1,
           "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.0.2",
+          "name": "Cell",
+          "type": "component",
+          "cName": "单元格",
+          "desc": "列表项，可组成列表",
+          "sort": 2,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.0.2",
+          "name": "Icon",
+          "type": "component",
+          "cName": "图标",
+          "desc": "基于 IconFont 字体的图标集",
+          "sort": 3,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.0.2",
+          "name": "Image",
+          "type": "component",
+          "tarodoc": true,
+          "cName": "图片",
+          "desc": "增强版的 img 标签，提供多种图片填充模式，支持图片加载中提示、加载失败提示。",
+          "sort": 4,
+          "show": true,
+          "author": ""
+        },{
+          "version": "0.0.2",
+          "name": "Overlay",
+          "type": "component",
+          "cName": "遮罩层",
+          "desc": "创建一个遮罩层，通常用于阻止用户进行其他操作",
+          "sort": 5,
+          "show": true,
+          "author": ""
+        },{
+          "version": "0.1.0",
+          "name": "Popup",
+          "sort": 6,
+          "cName": "弹出层",
+          "type": "component",
+          "show": true,
+          "taro": true,
+          "desc": "弹出层容器，用于展示弹窗、信息提示等内容，支持多个弹出层叠加展示",
+          "author": ""
+        }
+      ]
+    },
+    {
+      "name": "布局组件",
+      "enName": "layout",
+      "packages": [
+        {
+          "version": "0.0.2",
+          "name": "Layout",
+          "type": "component",
+          "cName": "布局",
+          "desc": "协助进行页面级整体布局。",
+          "sort": 1,
+          "show": false,
+          "author": ""
+        },
+        {
+          "version": "0.0.2",
+          "name": "Col",
+          "type": "component",
+          "cName": "列",
+          "desc": "布局组件中的列",
+          "sort": 2,
+          "show": false,
+          "exportEmpty": true,
+          "author": ""
+        },
+        {
+          "version": "0.0.2",
+          "name": "Row",
+          "type": "component",
+          "cName": "行",
+          "desc": "布局组件中的行",
+          "sort": 3,
+          "show": false,
+          "exportEmpty": true,
+          "author": "yushuang24"
+        },
+        {
+          "version": "0.0.2",
+          "name": "Divider",
+          "type": "component",
+          "cName": "分割线",
+          "desc": "用于将内容分隔为多个区域",
+          "sort": 4,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.0.2",
+          "name": "Grid",
+          "type": "component",
+          "cName": "宫格",
+          "desc": "宫格",
+          "sort": 5,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.0.2",
+          "name": "GridItem",
+          "type": "component",
+          "cName": "宫格子组件",
+          "desc": "宫格子组件",
+          "sort": 6,
+          "show": false,
+          "exportEmpty": true,
           "author": ""
         }
       ]
@@ -21,7 +140,7 @@
       "enName": "nav",
       "packages": [
         {
-          "version": "0.0.1",
+          "version": "0.0.2",
           "name": "Elevator",
           "type": "component",
           "cName": "电梯楼层",
@@ -59,6 +178,44 @@
           "sort": 4,
           "show": true,
           "author": ""
+        }, {
+          "version": "0.1.0",
+          "name": "NavBar",
+          "type": "component",
+          "cName": "头部导航",
+          "desc": "提供导航功能。",
+          "sort": 5,
+          "show": true,
+          "author": ""
+        },{
+          "version": "0.1.0",
+          "name": "Pagination",
+          "type": "component",
+          "cName": "分页",
+          "desc": "当数据量较多时，采用分页的形式分隔长列表。",
+          "sort": 6,
+          "show": true,
+          "author": ""
+        },{
+          "version": "1.0.0",
+          "name": "Tabs",
+          "type": "component",
+          "cName": "选项卡切换",
+          "desc": "常用于平级区域大块内容的的收纳和展现，支持内嵌标签形式和渲染循环数据形式",
+          "sort": 7,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "TabPane",
+          "sort": 2,
+          "cName": "选项卡切换子组件",
+          "type": "component",
+          "show": false,
+          "exportEmpty": true,
+          "desc": "选项卡切换子组件",
+          "author": ""
         }
       ]
     },
@@ -74,6 +231,57 @@
           "sort": 1,
           "show": true,
           "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "Checkbox",
+          "type": "component",
+          "cName": "复选按钮",
+          "desc": "多选按钮用于选择。",
+          "sort": 2,
+          "show": true,
+          "taro": true,
+          "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "CheckboxGroup",
+          "type": "component",
+          "cName": "多选按钮组",
+          "desc": "多选按钮组",
+          "sort": 3,
+          "show": false,
+          "exportEmpty": true,
+          "author": ""
+        },{
+          "version": "0.1.0",
+          "name": "InputNumber",
+          "type": "component",
+          "cName": "数字输入框",
+          "desc": "通过点击按钮控制数字增减。",
+          "sort": 4,
+          "show": true,
+          "author": ""
+        },{
+          "version": "0.1.0",
+          "name": "Radio",
+          "type": "component",
+          "cName": "单选按钮",
+          "desc": "用于在一组备选项中进行单选",
+          "sort": 5,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "RadioGroup",
+          "type": "component",
+          "cName": "单选按钮组",
+          "desc": "单选按钮组",
+          "sort": 6,
+          "exportEmpty": true,
+          "show": false,
+          "author": ""
         }
       ]
     },
@@ -82,14 +290,45 @@
       "enName": "feedback",
       "packages": [
         {
+          "version": "0.1.0",
+          "name": "ActionSheet",
+          "type": "component",
+          "cName": "动作面板",
+          "desc": "从底部弹出的动作菜单面板。",
+          "sort": 1,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "BackTop",
+          "type": "component",
+          "cName": "返回顶部",
+          "desc": "提供较长的页面快捷返回顶部功能。",
+          "sort": 2,
+          "show": true,
+          "author": ""
+        },
+        {
           "version": "0.0.1",
           "name": "Drag",
           "type": "component",
           "cName": "拖拽",
           "desc": "实现可拖拽的任意元素",
-          "sort": 1,
+          "sort": 3,
           "show": true,
           "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "Dialog",
+          "type": "component",
+          "cName": "对话框",
+          "desc": "模态对话框",
+          "sort": 4,
+          "show": true,
+          "taro": false,
+          "author": "yangjinjun3"
         },
         {
           "version": "0.0.1",
@@ -97,7 +336,36 @@
           "type": "component",
           "cName": "消息通知",
           "desc": "在页面顶部展示消息提示",
-          "sort": 2,
+          "sort": 3,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "Switch",
+          "type": "component",
+          "cName": "开关",
+          "desc": "用来打开或关闭选项。",
+          "sort": 11,
+          "show": true,
+          "taro": true,
+          "author": ""
+        }, {
+          "version": "0.1.0",
+          "name": "Toast",
+          "type": "component",
+          "cName": "吐司",
+          "desc": "轻提示",
+          "sort": 1,
+          "show": true,
+          "author": ""
+        },{
+          "version": "1.0.0",
+          "name": "Swipe",
+          "type": "component",
+          "cName": "滑动手势",
+          "desc": "可以左右滑动来展示操作按钮的组件",
+          "sort": 9,
           "show": true,
           "author": ""
         }
@@ -108,6 +376,80 @@
       "enName": "exhibition",
       "packages": [
         {
+          "version": "0.1.0",
+          "name": "NoticeBar",
+          "type": "component",
+          "cName": "公告栏",
+          "desc": "用于循环播放展示一组消息通知。",
+          "sort": 11,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "Steps",
+          "type": "component",
+          "cName": "步骤条",
+          "desc": "拆分展示某项流程的步骤，引导用户按流程完成任务或向用户展示当前状态。",
+          "sort": 7,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "3.0.0",
+          "name": "Step",
+          "sort": 17,
+          "cName": "步骤条子组件",
+          "type": "component",
+          "show": false,
+          "exportEmpty": true,
+          "desc": "步骤条子组件",
+          "author": ""
+        },
+        {
+          "version": "1.0.0",
+          "name": "Swiper",
+          "type": "component",
+          "cName": "轮播",
+          "desc": "轮播组件",
+          "sort": 14,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "1.0.0",
+          "name": "SwiperItem",
+          "type": "component",
+          "cName": "轮播子组件",
+          "desc": "轮播子组件",
+          "sort": 14,
+          "show": false,
+          "exportEmpty": true,
+          "author": ""
+        },
+        {
+          "version": "0.0.1",
+          "name": "Avatar",
+          "type": "component",
+          "cName": "头像",
+          "desc": "用来代表用户或事物，支持图片、图标或字符展示。",
+          "sort": 2,
+          "show": true,
+          "taro": true,
+          "author": ""
+        },
+        {
+          "version": "1.0.0",
+          "name": "AvatarGroup",
+          "type": "component",
+          "cName": "头像组合子组件",
+          "desc": "头像组合子组件",
+          "sort": 18,
+          "show": false,
+          "exportEmpty": true,
+          "author": ""
+        },
+        {
           "version": "0.0.1",
           "name": "Collapse",
           "type": "component",
@@ -115,6 +457,17 @@
           "desc": "折叠面板，可进行内容折叠展开操作，可以多面板配合使用。",
           "sort": 1,
           "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "CollapseItem",
+          "type": "component",
+          "cName": "折叠面板子组件",
+          "desc": "折叠面板的子组件",
+          "sort": 13,
+          "show": false,
+          "exportEmpty": true,
           "author": ""
         },
         {
@@ -134,6 +487,133 @@
           "cName": "价格",
           "desc": "用来对商品价格数值的小数点前后部分应用不同样式，还支持人民币符号、千位分隔符、设置小数点位数等功能。",
           "sort": 3,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "Badge",
+          "type": "component",
+          "cName": "徽标",
+          "desc": "在图标或文字右上角的红色圆点、数字或者文字，表示有新内容或者待处理的信息。",
+          "sort": 4,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "Tag",
+          "type": "component",
+          "cName": "标签",
+          "desc": "用于标记和分类。",
+          "sort": 4,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "1.0.0",
+          "name": "TrendArrow",
+          "type": "component",
+          "cName": "趋势箭头",
+          "desc": "带有箭头指示的百分比数字,用以展示指标趋势",
+          "sort": 25,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.1.0",
+          "name": "Popover",
+          "type": "component",
+          "cName": "气泡弹出框",
+          "desc": "气泡弹出框",
+          "sort": 19,
+          "show": false,
+          "author": ""
+        },
+        {
+          "name": "Skeleton",
+          "type": "component",
+          "cName": "骨架屏",
+          "desc": "在页面上待加载区域填充灰色的占位图，本质上是界面加载过程中的过渡效果。",
+          "sort": 15,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "1.0.0",
+          "name": "CountDown",
+          "type": "component",
+          "cName": "倒计时",
+          "desc": "用于实时展示倒计时数值，支持毫秒精度。",
+          "sort": 17,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "1.0.0",
+          "name": "VirtualList",
+          "type": "component",
+          "cName": "虚拟列表",
+          "desc": "长列表渲染",
+          "sort": 20,
+          "show": true,
+          "author": ""
+        }, 
+        {
+          "version": "1.0.0",
+          "name": "Table",
+          "type": "component",
+          "cName": "表格",
+          "desc": "表格",
+          "sort": 21,
+          "show": true,
+          "author": "yangjinjun3"
+        }
+      ]
+    },
+    {
+      "name": "特色组件",
+      "enName": "business",
+      "packages": [
+        {
+          "version": "1.0.0",
+          "name": "Card",
+          "type": "component",
+          "cName": "商品卡片",
+          "desc": "商品卡片，用于展示商品的图片、价格等信息",
+          "sort": 1,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "1.0.0",
+          "name": "TimePannel",
+          "type": "component",
+          "cName": "配送时间",
+          "desc": "配送时间日期选择",
+          "sort": 2,
+          "show": false,
+          "exportEmpty": true,
+          "author": ""
+        },
+        {
+          "version": "1.0.0",
+          "name": "TimeDetail",
+          "type": "component",
+          "cName": "配送时间",
+          "desc": "配送时间上门时间选择",
+          "sort": 3,
+          "show": false,
+          "exportEmpty": true,
+          "author": ""
+        },
+        {
+          "version": "1.0.0",
+          "name": "TimeSelect",
+          "type": "component",
+          "cName": "配送时间",
+          "desc": "用于配送时间选择",
+          "sort": 4,
           "show": true,
           "author": ""
         }
