--- a/sites/config.json
+++ b/sites/config.json
@@ -5,7 +5,7 @@
       "enName": "base",
       "packages": [
         {
-          "version": "0.0.2",
+          "version": "0.0.3",
           "name": "Button",
           "type": "component",
           "cName": "按钮",
@@ -15,7 +15,7 @@
           "author": ""
         },
         {
-          "version": "0.0.2",
+          "version": "0.0.3",
           "name": "Cell",
           "type": "component",
           "cName": "单元格",
@@ -25,36 +25,47 @@
           "author": ""
         },
         {
-          "version": "0.0.2",
+          "version": "0.0.3",
+          "name": "ConfigProvider",
+          "type": "component",
+          "cName": "全局配置",
+          "desc": "可以配置多语言等全局属性",
+          "sort": 3,
+          "show": false,
+          "exportEmpty": true,
+          "author": ""
+        },
+        {
+          "version": "0.0.3",
           "name": "Icon",
           "type": "component",
           "cName": "图标",
           "desc": "基于 IconFont 字体的图标集",
-          "sort": 3,
+          "sort": 4,
           "show": true,
           "author": ""
         },
         {
-          "version": "0.0.2",
+          "version": "0.0.3",
           "name": "Image",
           "type": "component",
           "tarodoc": true,
           "cName": "图片",
           "desc": "增强版的 img 标签，提供多种图片填充模式，支持图片加载中提示、加载失败提示。",
-          "sort": 4,
-          "show": true,
-          "author": ""
-        },{
-          "version": "0.0.2",
-          "name": "Overlay",
-          "type": "component",
-          "cName": "遮罩层",
-          "desc": "创建一个遮罩层，通常用于阻止用户进行其他操作",
           "sort": 5,
           "show": true,
           "author": ""
         },{
-          "version": "0.1.0",
+          "version": "0.0.3",
+          "name": "Overlay",
+          "type": "component",
+          "cName": "遮罩层",
+          "desc": "创建一个遮罩层，通常用于阻止用户进行其他操作",
+          "sort": 6,
+          "show": true,
+          "author": ""
+        },{
+          "version": "0.0.3",
           "name": "Popup",
           "sort": 6,
           "cName": "弹出层",
@@ -71,7 +82,7 @@
       "enName": "layout",
       "packages": [
         {
-          "version": "0.0.2",
+          "version": "0.0.3",
           "name": "Layout",
           "type": "component",
           "cName": "布局",
@@ -81,7 +92,7 @@
           "author": ""
         },
         {
-          "version": "0.0.2",
+          "version": "0.0.3",
           "name": "Col",
           "type": "component",
           "cName": "列",
@@ -92,18 +103,18 @@
           "author": ""
         },
         {
-          "version": "0.0.2",
+          "version": "0.0.3",
           "name": "Row",
           "type": "component",
-          "cName": "行",
-          "desc": "布局组件中的行",
+          "cName": "布局",
+          "desc": "协助进行页面级整体布局。",
           "sort": 3,
-          "show": false,
+          "show": true,
           "exportEmpty": true,
-          "author": "yushuang24"
+          "author": ""
         },
         {
-          "version": "0.0.2",
+          "version": "0.0.3",
           "name": "Divider",
           "type": "component",
           "cName": "分割线",
@@ -113,7 +124,7 @@
           "author": ""
         },
         {
-          "version": "0.0.2",
+          "version": "0.0.3",
           "name": "Grid",
           "type": "component",
           "cName": "宫格",
@@ -123,7 +134,7 @@
           "author": ""
         },
         {
-          "version": "0.0.2",
+          "version": "0.0.3",
           "name": "GridItem",
           "type": "component",
           "cName": "宫格子组件",
@@ -140,7 +151,7 @@
       "enName": "nav",
       "packages": [
         {
-          "version": "0.0.2",
+          "version": "0.0.3",
           "name": "Elevator",
           "type": "component",
           "cName": "电梯楼层",
@@ -150,7 +161,7 @@
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "FixedNav",
           "type": "component",
           "cName": "悬浮导航",
@@ -160,7 +171,7 @@
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "SideNavBar",
           "type": "component",
           "cName": "侧边栏导航",
@@ -170,7 +181,7 @@
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "Indicator",
           "type": "component",
           "cName": "指示器",
@@ -179,7 +190,7 @@
           "show": true,
           "author": ""
         }, {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "NavBar",
           "type": "component",
           "cName": "头部导航",
@@ -188,7 +199,7 @@
           "show": true,
           "author": ""
         },{
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "Pagination",
           "type": "component",
           "cName": "分页",
@@ -196,20 +207,42 @@
           "sort": 6,
           "show": true,
           "author": ""
-        },{
-          "version": "1.0.0",
-          "name": "Tabs",
+        },
+        {
+          "version": "0.0.3",
+          "name": "Tabbar",
           "type": "component",
-          "cName": "选项卡切换",
-          "desc": "常用于平级区域大块内容的的收纳和展现，支持内嵌标签形式和渲染循环数据形式",
+          "cName": "标签栏",
+          "desc": "底部导航常用场景",
           "sort": 7,
           "show": true,
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
+          "name": "TabbarItem",
+          "sort": 8,
+          "cName": "标签栏子组件",
+          "type": "component",
+          "show": false,
+          "exportEmpty": true,
+          "desc": "标签栏子组件",
+          "author": ""
+        },
+        {
+          "version": "0.0.3",
+          "name": "Tabs",
+          "type": "component",
+          "cName": "选项卡切换",
+          "desc": "常用于平级区域大块内容的的收纳和展现，支持内嵌标签形式和渲染循环数据形式",
+          "sort": 9,
+          "show": false,
+          "author": ""
+        },
+        {
+          "version": "0.0.3",
           "name": "TabPane",
-          "sort": 2,
+          "sort": 10,
           "cName": "选项卡切换子组件",
           "type": "component",
           "show": false,
@@ -224,6 +257,7 @@
       "enName": "dentry",
       "packages": [
         {
+          "version": "0.0.3",
           "name": "Calendar",
           "type": "component",
           "cName": "日历",
@@ -233,18 +267,17 @@
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "Checkbox",
           "type": "component",
           "cName": "复选按钮",
           "desc": "多选按钮用于选择。",
           "sort": 2,
           "show": true,
-          "taro": true,
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "CheckboxGroup",
           "type": "component",
           "cName": "多选按钮组",
@@ -254,7 +287,7 @@
           "exportEmpty": true,
           "author": ""
         },{
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "InputNumber",
           "type": "component",
           "cName": "数字输入框",
@@ -263,7 +296,7 @@
           "show": true,
           "author": ""
         },{
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "Radio",
           "type": "component",
           "cName": "单选按钮",
@@ -273,7 +306,7 @@
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "RadioGroup",
           "type": "component",
           "cName": "单选按钮组",
@@ -281,6 +314,16 @@
           "sort": 6,
           "exportEmpty": true,
           "show": false,
+          "author": ""
+        },
+        {
+          "version": "0.0.3",
+          "name": "Rate",
+          "type": "component",
+          "cName": "评分",
+          "desc": "用于快速的评级操作，或对评价进行展示。",
+          "sort": 7,
+          "show": true,
           "author": ""
         }
       ]
@@ -290,7 +333,7 @@
       "enName": "feedback",
       "packages": [
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "ActionSheet",
           "type": "component",
           "cName": "动作面板",
@@ -300,7 +343,7 @@
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "BackTop",
           "type": "component",
           "cName": "返回顶部",
@@ -310,7 +353,7 @@
           "author": ""
         },
         {
-          "version": "0.0.1",
+          "version": "0.0.3",
           "name": "Drag",
           "type": "component",
           "cName": "拖拽",
@@ -320,52 +363,51 @@
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "Dialog",
           "type": "component",
           "cName": "对话框",
           "desc": "模态对话框",
           "sort": 4,
-          "show": true,
-          "taro": false,
+          "show": false,
           "author": "yangjinjun3"
         },
         {
-          "version": "0.0.1",
+          "version": "0.0.3",
           "name": "Notify",
           "type": "component",
           "cName": "消息通知",
           "desc": "在页面顶部展示消息提示",
-          "sort": 3,
+          "sort": 5,
           "show": true,
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "Switch",
           "type": "component",
           "cName": "开关",
           "desc": "用来打开或关闭选项。",
-          "sort": 11,
+          "sort": 6,
           "show": true,
           "taro": true,
           "author": ""
         }, {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "Toast",
           "type": "component",
           "cName": "吐司",
           "desc": "轻提示",
-          "sort": 1,
+          "sort": 7,
           "show": true,
           "author": ""
         },{
-          "version": "1.0.0",
+          "version": "0.0.3",
           "name": "Swipe",
           "type": "component",
           "cName": "滑动手势",
           "desc": "可以左右滑动来展示操作按钮的组件",
-          "sort": 9,
+          "sort": 8,
           "show": true,
           "author": ""
         }
@@ -376,29 +418,29 @@
       "enName": "exhibition",
       "packages": [
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "NoticeBar",
           "type": "component",
           "cName": "公告栏",
           "desc": "用于循环播放展示一组消息通知。",
-          "sort": 11,
+          "sort": 1,
           "show": true,
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "Steps",
           "type": "component",
           "cName": "步骤条",
           "desc": "拆分展示某项流程的步骤，引导用户按流程完成任务或向用户展示当前状态。",
-          "sort": 7,
+          "sort": 2,
           "show": true,
           "author": ""
         },
         {
-          "version": "3.0.0",
+          "version": "0.0.3",
           "name": "Step",
-          "sort": 17,
+          "sort": 3,
           "cName": "步骤条子组件",
           "type": "component",
           "show": false,
@@ -407,167 +449,177 @@
           "author": ""
         },
         {
-          "version": "1.0.0",
+          "version": "0.0.3",
           "name": "Swiper",
           "type": "component",
           "cName": "轮播",
           "desc": "轮播组件",
-          "sort": 14,
+          "sort": 4,
           "show": true,
           "author": ""
         },
         {
-          "version": "1.0.0",
+          "version": "0.0.3",
           "name": "SwiperItem",
           "type": "component",
           "cName": "轮播子组件",
           "desc": "轮播子组件",
-          "sort": 14,
+          "sort": 5,
           "show": false,
           "exportEmpty": true,
           "author": ""
         },
         {
-          "version": "0.0.1",
+          "version": "0.0.3",
           "name": "Avatar",
           "type": "component",
           "cName": "头像",
           "desc": "用来代表用户或事物，支持图片、图标或字符展示。",
-          "sort": 2,
+          "sort": 6,
           "show": true,
-          "taro": true,
           "author": ""
         },
         {
-          "version": "1.0.0",
+          "version": "0.0.3",
           "name": "AvatarGroup",
           "type": "component",
           "cName": "头像组合子组件",
           "desc": "头像组合子组件",
-          "sort": 18,
+          "sort": 7,
           "show": false,
           "exportEmpty": true,
           "author": ""
         },
         {
-          "version": "0.0.1",
+          "version": "0.0.3",
           "name": "Collapse",
           "type": "component",
           "cName": "折叠面板",
           "desc": "折叠面板，可进行内容折叠展开操作，可以多面板配合使用。",
-          "sort": 1,
+          "sort": 8,
           "show": true,
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "CollapseItem",
           "type": "component",
           "cName": "折叠面板子组件",
           "desc": "折叠面板的子组件",
-          "sort": 13,
+          "sort": 9,
           "show": false,
           "exportEmpty": true,
           "author": ""
         },
         {
-          "version": "1.0.0",
+          "version": "0.0.3",
+          "name": "Ellipsis",
+          "type": "component",
+          "cName": "文本省略",
+          "desc": "展示空间不足时，隐去部分内容并用“…”替代。",
+          "sort": 10,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.0.3",
           "name": "Empty",
           "type": "component",
           "cName": "空状态",
           "desc": "空状态时的占位提示",
-          "sort": 2,
+          "sort": 11,
           "show": true,
           "author": ""
         },
         {
-          "version": "0.0.1",
+          "version": "0.0.3",
           "name": "Price",
           "type": "component",
           "cName": "价格",
           "desc": "用来对商品价格数值的小数点前后部分应用不同样式，还支持人民币符号、千位分隔符、设置小数点位数等功能。",
-          "sort": 3,
+          "sort": 12,
           "show": true,
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "Badge",
           "type": "component",
           "cName": "徽标",
           "desc": "在图标或文字右上角的红色圆点、数字或者文字，表示有新内容或者待处理的信息。",
-          "sort": 4,
+          "sort": 13,
           "show": true,
           "author": ""
         },
         {
-          "version": "0.1.0",
+          "version": "0.0.3",
           "name": "Tag",
           "type": "component",
           "cName": "标签",
           "desc": "用于标记和分类。",
-          "sort": 4,
+          "sort": 14,
           "show": true,
           "author": ""
         },
         {
-          "version": "1.0.0",
+          "version": "0.0.3",
           "name": "TrendArrow",
           "type": "component",
           "cName": "趋势箭头",
           "desc": "带有箭头指示的百分比数字,用以展示指标趋势",
-          "sort": 25,
-          "show": true,
-          "author": ""
-        },
-        {
-          "version": "0.1.0",
-          "name": "Popover",
-          "type": "component",
-          "cName": "气泡弹出框",
-          "desc": "气泡弹出框",
-          "sort": 19,
-          "show": false,
-          "author": ""
-        },
-        {
-          "name": "Skeleton",
-          "type": "component",
-          "cName": "骨架屏",
-          "desc": "在页面上待加载区域填充灰色的占位图，本质上是界面加载过程中的过渡效果。",
           "sort": 15,
           "show": true,
           "author": ""
         },
         {
-          "version": "1.0.0",
-          "name": "CountDown",
+          "version": "0.0.3",
+          "name": "Popover",
           "type": "component",
-          "cName": "倒计时",
-          "desc": "用于实时展示倒计时数值，支持毫秒精度。",
+          "cName": "气泡弹出框",
+          "desc": "气泡弹出框",
+          "sort": 16,
+          "show": false,
+          "author": ""
+        },
+        {
+          "version": "0.0.3",
+          "name": "Skeleton",
+          "type": "component",
+          "cName": "骨架屏",
+          "desc": "在页面上待加载区域填充灰色的占位图，本质上是界面加载过程中的过渡效果。",
           "sort": 17,
           "show": true,
           "author": ""
         },
         {
-          "version": "1.0.0",
+          "version": "0.0.3",
+          "name": "CountDown",
+          "type": "component",
+          "cName": "倒计时",
+          "desc": "用于实时展示倒计时数值，支持毫秒精度。",
+          "sort": 18,
+          "show": true,
+          "author": ""
+        },
+        {
+          "version": "0.0.3",
           "name": "VirtualList",
           "type": "component",
           "cName": "虚拟列表",
           "desc": "长列表渲染",
-          "sort": 20,
+          "sort": 19,
           "show": true,
           "author": ""
         }, 
         {
-          "version": "1.0.0",
+          "version": "0.0.3",
           "name": "Table",
           "type": "component",
           "cName": "表格",
           "desc": "表格",
-          "sort": 21,
+          "sort": 20,
           "show": true,
-          "author": "yangjinjun3"
+          "author": ""
         }
       ]
     },
@@ -576,7 +628,7 @@
       "enName": "business",
       "packages": [
         {
-          "version": "1.0.0",
+          "version": "0.0.3",
           "name": "Card",
           "type": "component",
           "cName": "商品卡片",
@@ -586,7 +638,7 @@
           "author": ""
         },
         {
-          "version": "1.0.0",
+          "version": "0.0.3",
           "name": "TimePannel",
           "type": "component",
           "cName": "配送时间",
@@ -597,7 +649,7 @@
           "author": ""
         },
         {
-          "version": "1.0.0",
+          "version": "0.0.3",
           "name": "TimeDetail",
           "type": "component",
           "cName": "配送时间",
@@ -608,7 +660,7 @@
           "author": ""
         },
         {
-          "version": "1.0.0",
+          "version": "0.0.3",
           "name": "TimeSelect",
           "type": "component",
           "cName": "配送时间",
