--- a/sites/config.json
+++ b/sites/config.json
@@ -334,7 +334,16 @@
           "sort": 8,
           "show": true,
           "author": ""
-        }
+        },{
+            "version": "0.0.3",
+            "name": "TextArea",
+            "type": "component",
+            "cName": "文本域",
+            "desc": "文本框内输入或编辑文字，支持限制输入数量。",
+            "sort": 9,
+            "show": true,
+            "author": ""
+          }
       ]
     },
     {
