--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
   "dependencies": {
     "@bem-react/classname": "^1.5.12",
     "@react-spring/native": "9.3.2",
-    "react-native-linear-gradient": "^2.6.2",
     "react-native-root-portal": "^1.0.9"
   },
   "peerDependencies": {
+    "expo-linear-gradient": "^12.0.1",
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-linear-gradient": "^2.6.2"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
@@ -60,7 +61,6 @@
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "expo-linear-gradient": "^12.0.1",
     "expo-modules-core": "^1.1.1",
     "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
