fix: 修改渐变包 alias

--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "react-native-linear-gradient": ["node_modules/expo-linear-gradient/build/index.js"],
+    }
   }
 }
