fix: 修改文档同步

--- a/.github/workflows/sync-docs.yml
+++ b/.github/workflows/sync-docs.yml
@@ -6,7 +6,8 @@ on:
       - main # default branch
     paths:
       - '.github/workflows/**'
-      - 'src/**'
+      - 'components/**'
+      - 'sites/config.json'
       - 'package.json'
 
 jobs:
